--- a/todos.html
+++ b/todos.html
@@ -1,14 +1,28 @@
 <head>
-  <title>todos</title>
+    <title>Todos</title>
 </head>
-
 <body>
-  <h1>Welcome to Meteor!</h1>
-
-  {{> hello}}
+  {{> todos}}
 </body>
 
-<template name="hello">
-  <button>Click Me</button>
-  <p>You've pressed the button {{counter}} times.</p>
+<template name="todos">
+  {{> addTodo}}
+  <ul>
+    {{#each todo}}
+      {{> todoItem}}
+    {{/each}}
+  </ul>
 </template>
+
+<template name="todoItem">
+  <li>{{name}}
+    [<a href="#" class="delete-todo">Delete</a>]
+  </li>
+</template>
+
+<template name="addTodo">
+  <form>
+    Create a task:
+    <input type="text" placeholder="Type a task here..." name="todoName"> 
+  </form>
+</template>  
