--- a/todos.html
+++ b/todos.html
@@ -12,10 +12,13 @@
       {{> todoItem}}
     {{/each}}
   </ul>
+  {{> todosCount}}
 </template>
 
 <template name="todoItem">
-  <li>{{name}}
+  <li class="{{checked}}">
+    <input type="checkbox" {{checked}}>
+    <input type="text" value="{{name}}" name="todoItem">
     [<a href="#" class="delete-todo">Delete</a>]
   </li>
 </template>
@@ -26,3 +29,7 @@
     <input type="text" placeholder="Type a task here..." name="todoName"> 
   </form>
 </template>  
+
+<template name="todosCount">
+  <p>You have completed {{completedTodos}} out of {{totalTodos}} tasks.</p>
+</template>
