--- a/todos.html
+++ b/todos.html
@@ -40,6 +40,11 @@
 
 <template name="login">
     <h2>Login</h2>
+    <form class="login">
+      <p>Email: <input type="email" name="email"></p>
+      <p>Password: <input type="password" name="password"></p>
+      <p><input type="submit" value="Login"></p>
+    </form>
 </template>
 
 <template name="home">
@@ -49,7 +54,9 @@
 <template name="main">
     <h1>Todos</h1>
     {{> navigation}}
-    {{> lists}}
+    {{#if currentUser}}
+      {{> lists}}
+    {{/if}}
     {{> yield}}
     <hr />
     <p>Copyright &copy; Todos, 2014-2015.</p>
@@ -58,10 +65,13 @@
 <template name="navigation">
   <ul>
     <li><a href="{{pathFor route='home'}}">Home</a></li>
-    <li><a href="{{pathFor route='register'}}">Register</a></li>
-    <li><a href="{{pathFor route='login'}}">Login</a></li>
+    {{#if currentUser}}
+      <li><a href="#" class="logout">Logout</a> </li>
+    {{else}}
+     <li><a href="{{pathFor route='register'}}">Register</a></li>
+      <li><a href="{{pathFor route='login'}}">Login</a></li>
+    {{/if}}
   </ul>
-
 </template>
 
 <template name="addList">
