--- a/todos.html
+++ b/todos.html
@@ -32,8 +32,8 @@
 <template name="register">
     <h2>Register</h2>
     <form class="register">
-      <p>Email: <input type="email" name='email'></p>
-      <p>Password: <input type="password" name='password'></p>
+      <p>Email: <input type="email" name='email' required ></p>
+      <p>Password: <input type="password" name='password' required ></p>
       <p><input type="submit" value="Register"></p>
     </form>
 </template>
@@ -41,8 +41,8 @@
 <template name="login">
     <h2>Login</h2>
     <form class="login">
-      <p>Email: <input type="email" name="email"></p>
-      <p>Password: <input type="password" name="password"></p>
+      <p>Email: <input type="email" name="email" required ></p>
+      <p>Password: <input type="password" name="password" required ></p>
       <p><input type="submit" value="Login"></p>
     </form>
 </template>
